spec: Add note about scroll bars

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -852,6 +852,10 @@ Dieser Fall tritt ein, wenn der Interpreter einen Rückschritt vom eingegeben Zi
 In diesem Fall gibt es keine Fakten mehr, die mit dem Ziel unifizierbar sind.
 Unabhängig davon, ob es per se keine Lösungen gibt oder schon Lösungen gefunden wurden, wird die Meldung \enquote{Keine weiteren Lösungen.} angezeigt.
 
+In diesem Entwurf ist außerdem der Scrollbalken gezeigt (3).
+Dieser wird neben der Konsole eingeblendet, wenn der angezeigt Text nicht mehr hineinpasst.
+Dies gilt auch für den Editor.
+
 \subsection{Schaltfläche \enquote{Vorheriger Schritt}}
 
 \begin{minipage}{\linewidth}
