spec: Minor consistency fixes to test T14
- No need for "New" before empty editor appears
- 'Inhalt des Editors' instead of 'Inhalt des Prolog-Programms'
- s/Parser/Parsen

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -593,13 +593,9 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 \tests{fnc:parser}
 \tests{fnc:errorcheck}
 
-\teststep{Der Nutzer hat das Programm geöffnet.}
-{Der Nutzer wählt über die Menü-Leiste die Neu-Funktion aus.}
-{Eine leeres Prolog-Programm wird im Editor angelegt.}
-
 \teststep{Der Nutzer hat ein leeres Editor-Fenster vor sich.}
 {Der Nutzer gibt das unformatierte \texttt{simpsons.pl}-Programm wie im Anhang beschrieben ein.}
-{Der Editor ändert den Inhalt des Prolog-Programms entsprechend der Eingabe.}
+{Der Inhalt des Editors wird entsprechend der Eingabe geändert.}
 
 \teststep{Das unformatierte \texttt{simpsons.pl}-Programm ist im Editor eingetragen.}
 {Der Nutzer betätigt die Formatieren-Schaltfläche.}
@@ -614,7 +610,7 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 {Das Prolog-Programm wird im gewählten Verzeichnis gespeichert.}
 
 \teststep{Das formatierte \texttt{simpsons.pl}-Programm ist im Editor eingetragen und gespeichert.}
-{Der Nutzer betätigt die Parser-Schaltfläche.}
+{Der Nutzer betätigt die Parsen-Schaltfläche.}
 {Das Prolog-Programm wird erfolgreich geparst. Es werden keine Fehlermeldungen ausgegeben. Das Eingabefeld wird freigegeben und fokussiert.}
 
 \teststep{Das formatierte \texttt{simpsons.pl}-Programm ist im Editor eingetragen, gespeichert und durch den Parser verarbeitet worden.}
@@ -622,7 +618,7 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 {Das Eingabefeld wird gesperrt.}
 
 \teststep{Das unformatierte \texttt{simpsons.pl}-Programm ist im Editor eingetragen und gespeichert worden. Das Wort \enquote{Fehler} wurde vor die ursprüngliche erste Zeile eingetragen.}
-{Der Nutzer betätigt die Parser-Schaltfläche.}
+{Der Nutzer betätigt die Parsen-Schaltfläche.}
 {Das Eingabefeld bleibt weiterhin gesperrt. Der Parser gibt über die Konsole eine Syntax-Fehlermeldung aus.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -643,7 +639,7 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 {Der Editor enthält die formatierte \texttt{simpsons.pl}-Programmdatei analog zum Anhang.}
 
 \teststep{Der Editor enthält die formatierte \texttt{simpsons.pl}-Programmdatei analog zum Anhang.}
-{Der Nutzer betätigt die Parser-Schaltfläche.}
+{Der Nutzer betätigt die Parsen-Schaltfläche.}
 {Das Prolog-Programm wird erfolgreich geparst. Es werden keine Fehlermeldungen ausgegeben. Das Eingabefeld wird freigegeben und fokussiert.}
 
 \teststep{Das Prolog-Programm wurde erfolgreich geparst. Es wurden keine Fehlermeldungen ausgegeben.}
@@ -670,7 +666,7 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 {Das \texttt{simpsons.pl}-Programm wird im Editor geöffnet.}
 
 \teststep{Der Editor enthält die formatierte \texttt{simpsons.pl}-Programmdatei analog zum Anhang.}
-{Der Nutzer betätigt die Parser-Schaltfläche.}
+{Der Nutzer betätigt die Parsen-Schaltfläche.}
 {Das Prolog-Programm wird erfolgreich geparst. Es werden keine Fehlermeldungen ausgegeben. Das Eingabefeld wird freigegeben und fokussiert.}
 
 \teststep{Das Prolog-Programm wurde erfolgreich geparst. Es wurden keine Fehlermeldungen ausgegeben.}
