spec: Update zoom buttons in GUI
- Change position to inside the visualisation box
- Change labels to "+" and "-"

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -828,7 +828,7 @@ Gibt der Nutzer eine Abfrage (1) im Eingabefeld ein, versucht der Parser, diese 
 Treten dabei keine Fehler auf, wird eine Meldung in der Konsole angezeigt (2) und die Visualisierung der Abarbeitung dieser Abfrage gestartet (3).
 Eine Leiste mit Schaltflächen, die zur Steuerung der Visualisierung dienen, wird angezeigt.
 Die Schaltfäche \enquote{Nächster Schritt} (4) bewirkt die Ausführung und Visualisierung des nächsten Schrittes.
-Die Schaltflächen \enquote{Größer} und \enquote{Kleiner} (5) dienen zum Zoomen in der Visualisierung.
+Die Schaltflächen \enquote{+} und \enquote{-} (5) dienen zum Zoomen in der Visualisierung.
 
 \subsubsection{Lösung gefunden}
 
