--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -940,9 +940,10 @@ Außerdem sind sie rot eingefärbt.
 
 \subsubsection{Erfolgreiche Unifikation und Teilziele}
 
-In den weiteren Schritten schlagen die Unifikationen von \texttt{grandfather(X, Y)} mit \texttt{father(homer, bart)}, \texttt{father(homer, lisa)} und \texttt{mother(marge, bart)} fehl.
-Die Unifikation mit der Regel \texttt{grandfather(X, Y)} ist erfolgreich.
+Die erste Regel mit zu \texttt{grandfather(X, Y)} passendem Funktornamen ist auch die einzige, in Zeile 6.
+Die Unifikation mit dieser Regel ist erfolgreich.
 Dabei werden die Variablennamen durch neue, eindeutige Namen ersetzt um Konflikte zu vermeiden.
+Der neue Name einer Variable setzt sich zusammen aus dem ursprünglichen Namen und der laufenden Nummer der erfolgreichen Unifikation, beginnend bei eins.
 
 \begin{minipage}{\linewidth}
 \makebox[\linewidth]{
@@ -951,6 +952,9 @@ Dabei werden die Variablennamen durch neue, eindeutige Namen ersetzt um Konflikt
 \captionof{figure}{Eine erfolgreiche Unifikation mit Einfügung der Teilziele}
 \end{minipage}
 
+Die Visualisierung stellt zu unifizierende Ziele als Runde Knoten dar.
+Unifikationen werden in  Rechtecken dargestellt, die in zwei weitere Rechtecke aufgeteilt sind.
+Dabei enthält jede Unifikation im oberen Rechteck den Fakt, mit dem unifiziert werden soll.
 Erfolgreiche Unifikationen enthalten im unteren Rechteck die resultierenden Substitutionen.
 Außerdem sind sie grün eingefärbt.
 
@@ -959,7 +963,7 @@ Die Substitutionen werden in den Teilzielen angewendet und hervorgehoben.
 Die Unifikation und ihre Teilziele werden durch gestrichelte Kanten verbunden.
 Dadurch werden im Baum die Fälle \enquote{Ziel wurde unifiziert mit} und \enquote{Ziel ist Teilziel von Regel} unterschieden.
 
-\subsubsection{Erfolgreiche Unifikation mit rückwirkender Substitution}
+\subsubsection{Erfolgreiche Unifikation mit Substution in weiteren Teilzielen}
 
 Im nächsten Schritt steigt der Interpreter in die Teilziele ab und versucht, von links nach rechts diese zu unifizieren.
 
@@ -967,7 +971,7 @@ Im nächsten Schritt steigt der Interpreter in die Teilziele ab und versucht, vo
 \makebox[\linewidth]{
 \includegraphics[width=\linewidth]{build/visualisation/04_subgoal_father_success.png}
 }
-\captionof{figure}{Eine erfolgreiche Unifikation mit mit rückwirkender Substitution}
+\captionof{figure}{Eine erfolgreiche Unifikation Substitution im nächsten Teilziel}
 \end{minipage}
 
 In diesem Beispiel hat der gefundene Fakt keine Teilziele.
@@ -991,6 +995,23 @@ Der Interpreter muss also nach einer alternativen Definition von \texttt{parent}
 
 Ein Rücksprung wird durch eine aus Punkten bestehende, rot eingefärbte Kante dargestellt.
 Das nicht erfüllbare Teilziel wird ebenfalls rot eingefärbt und mit dem Text \enquote{Nicht erfüllbar!} ergänzt.
+
+\subsubsection{Fehlgeschlagene Unifikation}
+
+Nach dem Rücksprung findet der Interpreter die zweite \texttt{parent(X, Y)}-Regel, die das Teilziel \texttt{father(X, Y)} hat.
+Mit den bisherigen Lösungen ist das neue Ziel \texttt{father(homer, Y)}.
+Der Interpreter versucht, mit \texttt{father(abe, homer)} zu unifizieren, da der Funktorname übereinstimmt.
+Diese Unifikation schlägt fehl.
+
+\begin{minipage}{\linewidth}
+\makebox[\linewidth]{
+\includegraphics[width=\linewidth]{build/visualisation/11_subgoal_father_fail.png}
+}
+\captionof{figure}{Eine fehlgeschlagene Unifikation}
+\end{minipage}
+
+Fehlgeschlagene Unifikationen enthalten im unteren Rechteck den Satz \enquote{Unifikation fehlgeschlagen:} und den Grund des Fehlschlags.
+Außerdem sind sie rot eingefärbt.
 
 \section{Glossar}
 
