spec: Update menu
The old menu had buttons in it; the new one does not.
The buttons are now in submenus.

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -786,7 +786,7 @@ Das Eingabefeld bleibt weiterhin deaktiviert (3).
 \captionof{figure}{Hauptfenster nach Klick auf \enquote{Parsen}, mit inkorrektem Prolog-Programm}
 \end{minipage}
 
-Klickt der Nutzer auf \enquote{Parsen} (1), versucht der Parser das Prolog-Programm im Editor zu verarbeiten.
+Klickt der Nutzer auf \enquote{Parsen} im \enquote{Programm}-Menü (1), versucht der Parser das Prolog-Programm im Editor zu verarbeiten.
 Stößt er dabei auf Fehler, wird eine Fehlermeldung in der Konsole angezeigt (2).
 Das Eingabefeld bleibt weiterhin deaktiviert (3).
 
