spec: Correction in 'next solution' GUI explanation

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -902,7 +902,7 @@ Ist der Nutzer beim ersten Schritt angelangt, wird die Schaltfläche deaktiviert
 
 Die Schaltfläche \enquote{Nächste Lösung} (1) lässt den Interpreter automatisch Schritte ausführen, bis eine Lösung gefunden wurde oder keine Unifikation der Abfrage mehr möglich ist.
 Betätigt der Nutzer die Schaltfläche, wird sie hervorgehoben und ihr Text in \enquote{Abbrechen} geändert.
-Betätigt der Nutzer die Schaltfläche erneut, wird der Interpreter unterbrochen und der letzte vollständig berechnete Schritt angezeigt.
+Betätigt der Nutzer die Schaltfläche erneut, wird der Interpreter nach der aktuellen Berechnung unterbrochen und der resultierende Zustand wird visualisiert.
 
 \subsection{Visualisierung}
 
