spec: Add GUI draft containing export menu

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -904,6 +904,19 @@ Die Schaltfläche \enquote{Nächste Lösung} (1) lässt den Interpreter automati
 Betätigt der Nutzer die Schaltfläche, wird sie hervorgehoben und ihr Text in \enquote{Abbrechen} geändert.
 Betätigt der Nutzer die Schaltfläche erneut, wird der Interpreter nach der aktuellen Berechnung unterbrochen und der resultierende Zustand wird visualisiert.
 
+\subsubsection{Export der Visualisierung}
+
+\begin{minipage}{\linewidth}
+\makebox[\linewidth]{
+\includegraphics[width=\linewidth]{build/gui/main_view_exportmenu.png}
+}
+\captionof{figure}{Die Schaltflächen \enquote{Exportieren...}}
+\end{minipage}
+
+Die Schaltflächen \enquote{Exportieren als Bild} und \enquote{Exportieren als TikZ} erlauben dem Nutzer das Exportieren des Visualisierungsgraphen in verschiedenen Formaten (1).
+\enquote{Exportieren als Bild} lässt den Nutzer zwischen dem Export als SVG- oder PNG-Graphik wählen.
+\enquote{Exportieren als TikZ} lässt den Nutzer eine TeX-Datei mit einer Umsetzung des Graphen als TikZ-Graphik erstellen.
+
 \subsection{Visualisierung}
 
 Um die Visualisierungsbeispiele besser darzustellen zu können, wurden sie hier ohne die graphische Oberfläche des Programms eingefügt.
