--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -112,27 +112,39 @@ Damit soll dem Nutzer die Funktionsweise von Prolog-Programmen durch die graphis
 
 \criterium{Erstellen eines neuen Prolog-Programms}{crt:create}
 
-Das Programm soll in der Lage sein einen leeren Editor für neue Prolog-Programme bereitzustellen. Der Inhalt des Editors wird dabei gelöscht.
+Das Programm stellt einen leeren Editor für neue Prolog-Programme bereit. Der Inhalt des Editors wird dabei gelöscht.
 
 \criterium{Öffnen eines Prolog-Programms}{crt:open}
 
-Das Programm soll bereits vorhandene Prolog-Programme öffnen können.
+Das Programm kann bereits vorhandene Prolog-Programme öffnen.
+
+\criterium{Bearbeiten eines Prolog-Programms}{crt:edit}
+
+Das Programm erlaubt es dem Nutzer Änderungen an einem geöffneten Prolog-Programm durchzuführen. Dabei wird die aktuelle Interpretation gestoppt und die Visualisierung gelöscht.
 
 \criterium{Speichern eines Prolog-Programms}{crt:save}
 
-Das Programm soll Änderungen am momentan geladenen Prolog-Programm speichern können. Der Inhalt der Datei wird dabei überschrieben.
+Das Programm kann Änderungen am momentan geladenen Prolog-Programm speichern. Der Inhalt der Datei wird dabei überschrieben.
 
-\criterium{Parsen eines Prolog-Programms mit begrenztem Umfang}{crt:parser}
+\criterium{Parsen eines Prolog-Programms mit begrenztem Sprachumfang}{crt:parser}
 
-Das Programm kann eine Teilmenge der Sprache Prolog durch einen Parser verarbeiten.
+Das Programm kann eine \hyperref[prolog-language]{Teilmenge} der Sprache Prolog durch einen Parser verarbeiten.
+
+\criterium{Eingabe von Abfragen}{crt:request}
+
+Das Programm erlaubt es dem Nutzer Abfragen in der Konsole einzugeben. Dabei wird die aktuelle Interpretation abgebrochen und die Visualisierung gelöscht.
 
 \criterium{Einzelschritt-Interpretation von Abfragen}{crt:interpreter}
 
-Das Programm bearbeitet Abfragen schrittweise. Nach jedem durchgeführten Teilschritt einer Abfrage wartet das Programm auf Interaktion vom Nutzer (drücken der Verarbeiten-Schaltfläche), bis es den nächsten Teilschritt bearbeitet.
+Das Programm bearbeitet Abfragen schrittweise. Nach jedem durchgeführten Teilschritt einer Abfrage wartet das Programm auf Interaktion vom Nutzer (drücken der \enquote{Nächster Schritt}-Schaltfläche), bis es den nächsten Teilschritt bearbeitet.
 
 \criterium{Visualisierung als Graph}{crt:visualization}
 
-Das Programm kann die Abarbeitung einzelner Anfragen zu einem Prolog-Programm durch einen Graphen visualisieren.
+Das Programm kann die Abarbeitung einzelner Abfragen zu einem Prolog-Programm durch einen Graphen visualisieren.
+
+\criterium{Ausgabe von Lösungen zu einer Abfrage}{crt:answer}
+
+Das Programm kann Lösungen zu einer Abfrage in der Konsole ausgeben. Dabei wird bei einer Abfrage ohne Variablen \enquote{yes} oder \enquote{no} ausgegeben. Beinhaltet die Abfrage Variablen, so werden mögliche Variablenbelegungen ausgegeben. Gibt es keine Lösung, so wird eine entsprechende Meldung ausgegeben.
 
 \subsection{Kann}
 
@@ -142,11 +154,7 @@ Das Programm soll es dem Nutzer ermöglichen, beliebig viele Schritte schrittwei
 
 \criteriumOptional{Ausführung bis zur nächsten Lösung}{crt:continue}
 
-Die Interpretation soll durch eine zusätzliche Schaltfläche bis zur nächsten Lösung ausgeführt werden können.
-
-\criteriumOptional{Abbrechen}{crt:cancel}
-
-Das automatische Abarbeiten mehrerer Schritte soll durch das Betätigen einer Schaltfläche abgebrochen werden können. Hierbei wird der aktuelle Abarbeitungsschritt fertig berechnet und anschließend wird der Interpreter gestoppt.
+Die Interpretation soll durch eine zusätzliche Schaltfläche bis zur nächsten Lösung ausgeführt werden können. Diese Aktion kann durch das Betätigen der \enquote{Abbrechen}-Schaltfläche abgebrochen werden.
 
 \criteriumOptional{Cut}{crt:cut}
 
@@ -182,13 +190,17 @@ Das Programm soll Listen bei der Ausgabe einheitlich auf \enquote{\texttt{[x,y,z
 
 \criteriumOptional{Formatierung von Quelltext}{crt:formatting}
 
-Das Programm soll Quelltext in ein vorgeschriebenes Format bringen können.
+Das Programm soll Quelltext durch das Betätigen der \enquote{Formatieren}-Schaltfläche in ein \hyperref[format]{vorgeschriebenes Format} bringen können.
+
+\criterium{Wechseln der Sprache zwischen Deutsch und Englisch}{crt:translation}
+
+Das Programm soll den Sprachwechsel der Menüsprache zwischen \enquote{Deutsch} und \enquote{Englisch} unterstützen.
 
 \subsection{Abgrenzung}
 
 \criteriumNot{Voller Sprachsupport}{crt:fullsupport}
 
-Das Programm hat kein Verständnis für Prolog-Sprachfeatures außerhalb der vorgestellten Prolog-Teilmenge.
+Das Programm unterstützt keine Prolog-Sprachfeatures außerhalb der vorgestellten \hyperref[prolog-language]{Prolog-Teilmenge}.
 
 \criteriumNot{Andere Programmiersprachen}{crt:otherlanguages}
 
@@ -241,7 +253,7 @@ Die Pfade der fünf zuletzt geöffneten Dateien werden für einen Eintrag in der
 \section{Funktionale Anforderungen}
 
 \functionality{Erstellen eines neuen Prolog-Programms}{fnc:new}
-\fulfills{crt:new}
+\fulfills{crt:create}
 
 Das Programm stellt einen Editor bereit, in dem ein leeres Prolog-Programm angelegt werden kann. Sollte der Editor zuvor bereits ungesicherten Inhalt besitzen, so wird der Nutzer aufgefordert, diesen zu speichern. Der alte Inhalt wird daraufhin verworfen und ein neues Prolog-Programm angelegt.
 
@@ -256,7 +268,7 @@ Das Programm ist in der Lage, Prolog-Programmdateien zu öffnen. Der Datei-Inhal
 Das Programm bietet einen Schnellzugriff auf bis zu fünf der zuletzt verwendeten Dateien an. Diese können analog zu F2 geöffnet werden.
 
 \functionality{Bearbeiten eines Prolog-Programms}{fnc:editor}
-\fulfills{crt:save}
+\fulfills{crt:edit}
 \fulfills{crt:syntaxhighlighting}
 
 Das Prolog-Programm kann im Editor bearbeitet werden. Die Änderungen werden erst beim Speichern zurückgeschrieben.
@@ -278,7 +290,7 @@ Das geöffnete Prolog-Programm kann durch einen Parser verarbeitet werden. Wird 
 Der Parser erkennt Fehler innerhalb des geöffneten Prolog-Programms bei der Verarbeitung. Fehlermeldungen werden über das verfügbare Konsolen-Fenster ausgegeben.
 
 \functionality{Eingabe von Prolog-Abfragen in die Konsole}{fnc:shell}
-\fulfills{crt:interpreter}
+\fulfills{crt:request}
 
 Bei erfolgreicher Verarbeitung einer fehlerfreien Datei durch den Parser erlaubt die angezeigte Konsole die Eingabe von Abfragen. Sollten erneut Änderungen an dem geöffneten Prolog-Programm stattfinden, so wird die Eingabe in die Konsole sowie jegliche Interaktion mit der Visualisierung gesperrt bis der veränderte Quelltext erneut vom Parser verarbeitet wurde.
 
@@ -317,7 +329,7 @@ Eine Rückschritt-Schaltfläche erlaubt bei Betätigung den jeweils vorhergehend
 Eine Fortsetzen-Schaltfläche erlaubt bei Betätigung die Ausführung bis zur nächsten Ausgabe fortzuführen.
 
 \functionality{Abbrechen einer Interpretation}{fnc:cancel}
-\fulfills{crt:cancel}
+\fulfills{crt:continue}
 
 Im Falle einer Interpretation die mehrere Schritte hintereinander ausführt (Fortsetzen bis zur nächsten Ausgabe), kann die laufende Interpretation über eine Abbrechen-Schaltfläche frühzeitig beendet werden.
 
@@ -478,7 +490,7 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 {In der Konsole wird eine Erfolgsnachricht ausgegeben.}
 
 \teststep{Die Konsole erwartet eine Eingabe.}
-{Der Nutzer gibt eine Anfrage mit mehreren Antworten ein und bestätigt die Eingabe.}
+{Der Nutzer gibt eine Abfrage mit mehreren Antworten ein und bestätigt die Eingabe.}
 {Die Abfrage wird mittels eines Graphen visualisiert.}
 
 \teststep{Die Wurzel des Graphen wird angezeigt.}
@@ -521,7 +533,7 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 \test{Export als Bilddatei für Foliensätze}{tst:latexexport}
 \tests{fnc:latexexport}
 
-\teststep{Ein Prolog-Programm ist im Editor geöffnet und ein beliebiger Schritt einer Anfrage als Graph visualisiert.}
+\teststep{Ein Prolog-Programm ist im Editor geöffnet und ein beliebiger Schritt einer Abfrage als Graph visualisiert.}
 {Der Nutzer wählt über die Menüleiste die Exportieren-Funktion aus.}
 {Ein Auswahl-Dialog öffnet sich.}
 
@@ -538,7 +550,7 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 \test{Export als LaTeX für Foliensätze}{tst:latexexporttikz}
 \tests{fnc:latexexport}
 
-\teststep{Ein Prolog-Programm ist im Editor geöffnet und ein beliebiger Schritt einer Anfrage als Graph visualisiert.}
+\teststep{Ein Prolog-Programm ist im Editor geöffnet und ein beliebiger Schritt einer Abfrage als Graph visualisiert.}
 {Der Nutzer wählt über die Menüleiste die Exportieren-Funktion aus.}
 {Ein Auswahl-Dialog öffnet sich.}
 
@@ -961,6 +973,8 @@ Das vorgestellte VIPER-Programm. Dies ist zu unterscheiden von Prolog-Programmen
 Prolog-Quelltext in Form von Dateien auf einem Speichermedium. Dies ist zu unterscheiden von dem Programm im Sinne des VIPER-Programms.
 
 \textbf{Prolog-Teilsprache}:
+%TODO überarbeiten
+\label{prolog-language}
 Es gibt Identifier, Variablen und Zahlen die wie folgt notiert werden:
 
 \begin{lstlisting}
@@ -983,17 +997,9 @@ Regel := Funktor . | Funktor :- Ziel {, Ziel}* .
 Ziel := Funktor | Term = Term
 \end{lstlisting}
 
-Das Programm unterstützt das Parsen von Listen. Die leere Liste wird durch \enquote{\texttt{[]}} dargestellt, eine Liste mit Inhalt wird durch \enquote{\texttt{[1,2,3]}} dargestellt und intern als Listenkopf und \enquote{Restliste} behandelt, das heißt:\newline
-Liste: \texttt{[1,2,3]} = \texttt{[1|[2|[3|[]]]]}
+Außerdem unterstützt das Programm \hyperref[list]{Listen}.
 
 \subsection{Prolog-interne Begriffe}
-\textbf{Fakt}:
-Aussage, welche als wahr angenommen wird.
-
-Im Kontext von Prolog: eine Regel ohne Teilziele.
-
-\textbf{Regel}:
-Vorgeschriebene Folgerungen. Regeln können bspw. festsetzen, dass aus dem Fakt, dass jemand ein Elternteil ist, folgt, dass dieser Elternteil entweder Mutter oder Vater sein muss.
 
 \textbf{Identifier}:
 Wort, beginnend mit einem Kleinbuchstaben und fortsetzend mit Groß- und Kleinbuchstaben sowie Zahlen.
@@ -1001,14 +1007,22 @@ Wort, beginnend mit einem Kleinbuchstaben und fortsetzend mit Groß- und Kleinbu
 \textbf{Variable}:
 Platzhalter. Erlaubt das allgemeine Beschreiben von Regeln. Können für einen beliebigen Term stehen.
 
+\textbf{Term}:
+Sammelbegriff für Funktoren, Variablen oder Zahlen.
+
 \textbf{Funktor}:
 Sammelbegriff für Identifier, welche für sich allein stehen oder eine Liste an Termen auswerten.
+
+\textbf{Regel}:
+Vorgeschriebene Folgerungen. Regeln können bspw. festsetzen, dass aus dem Fakt, dass jemand ein Elternteil ist, folgt, dass dieser Elternteil entweder Mutter oder Vater sein muss.
 
 \textbf{Ziel}:
 Sammelbegriff für Funktoren, Vergleiche von Termen über den \enquote{\texttt{=}}-Operator, Arithmetik oder den \enquote{Cut}-Operator (\texttt{!}).
 
-\textbf{Term}:
-Sammelbegriff für Funktoren, Variablen oder Zahlen.
+\textbf{Fakt}:
+Aussage, welche als wahr angenommen wird.
+
+Im Kontext von Prolog: eine Regel ohne Teilziele.
 
 \textbf{Standardbibliothek}:
 Voreingestellte Regeln, welche automatisch bei der Verarbeitung durch den Parser angefügt werden können.
@@ -1035,10 +1049,25 @@ Schritte zwischen zwei Zuständen.
 Eine Regel wird rekursiv genannt, wenn sie selbst eines ihrer Teilziele ist.
 
 \textbf{Cut}:
-%TODO
+Wird durch \enquote{!} dargestellt. Teilziel einer Regel, welches beim ersten Überschreiten markiert wird und erfüllbar ist. Bei dem Versuch das markierte Teilziel ein weiteres Mal zu überschreiten, wird das Prüfen der Regel abgebrochen und diese als nicht erfüllbar evaluiert.
 
 \textbf{Arithmetik}:
-%TODO
+Grundlegende Arithmetik beinhaltet natürliche Zahlen inklusive der 0. Des weiteren werden folgende Operatoren unterstützt:\\
+\texttt{+, -, *, <, <=, >, >=, =/=, ==}\\
+\\
+Da Termgleichheit in Prolog keine Arithmetik unterstützt, können Abfragen wie\\
+\enquote{\texttt{4 = 1 + 3}}\\
+nicht ausgewertet werden. Deshalb wird zusätzlicher der \texttt{is}-Operator unterstützt. Dieser evaluiert erst beide Seiten und vergleicht diese anschließend.
+
+\textbf{Listen}:
+\label{list}
+Die leere Liste wird durch \enquote{\texttt{[]}} dargestellt. Eine Liste mit Inhalt wird durch \enquote{\texttt{[1,2,3]}} dargestellt und intern als Listenkopf und \enquote{Restliste} behandelt, das heißt:\\
+\texttt{[1,2,3]} =\\
+\texttt{[1|Teilliste1], Teilliste1=[2|Teilliste2], Teilliste2=[3|[]]} =\\
+\texttt{[1|[2|[3|[]]]]}
+
+\textbf{Gleichheit}:
+Terme sind genau dann gleich, wenn die linke und rechte Seite eines Terms identisch sind oder wenn Variablen in den Termen so belegt werden können, dass beide Seiten identisch sind.
 
 \subsection{Begriffe der Bedienoberfläche}
 \textbf{Öffnen}:
@@ -1078,9 +1107,10 @@ Das GUI entspricht der graphischen Benutzeroberfläche (graphical user interface
 Element der graphischen Oberfläche. Bietet über Text-Menüs Zugriff auf Funktionen wie Speichern und Öffnen.
 
 \textbf{Dialog}:
-Fenster zur Meldung einer Nachricht (Warnungs- oder Fehler-Dialog) oder Anfrage (bspw. Bestätigungs-Dialog).
+Fenster zur Meldung einer Nachricht (Warnungs- oder Fehler-Dialog) oder Abfrage (bspw. Bestätigungs-Dialog).
 
 \textbf{Formatierung}:
+\label{format}
 Vorgegebener Stil bzgl. der Setzung von Leerzeichen und Umbrüchen. Zu unterscheiden von Syntax, da Formatierung keinen Einfluss auf die Validität des Programms hat.
 
 \newpage
